--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@nuxt/content": "^1.15.1",
     "@tailwindcss/typography": "^0.5.2",
+    "bootstrap": "^5.2.0-beta1",
     "clipboard": "^2.0.10",
     "core-js": "^3.19.3",
     "devicon": "^2.15.1",
     "nuxt": "^2.15.8",
     "prism-themes": "^1.9.0",
-    "prismjs": "^1.27.0",
+    "prismjs": "^1.30.0",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
@@ -26,7 +27,7 @@
     "@nuxt/image": "^0.6.2",
     "@nuxtjs/svg": "^0.4.0",
     "autoprefixer": "^10.4.4",
-    "nuxt-vite": "^0.3.5",
+    "playwright": "^1.56.0",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.23"
   }
