--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint:fix": "eslint --ext .js,.vue --ignore-path .gitignore . --fix",
+    "format": "prettier --write \"**/*.{js,vue,css,md,json}\"",
+    "format:check": "prettier --check \"**/*.{js,vue,css,md,json}\""
   },
   "dependencies": {
     "@nuxt/content": "^1.15.1",
@@ -25,10 +29,16 @@
   },
   "devDependencies": {
     "@nuxt/image": "^0.6.2",
+    "@nuxtjs/eslint-config": "^12.0.0",
     "@nuxtjs/svg": "^0.4.0",
     "autoprefixer": "^10.4.4",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-nuxt": "^4.0.0",
+    "eslint-plugin-vue": "^9.28.0",
     "playwright": "^1.56.0",
     "postcss": "^8.4.12",
+    "prettier": "^3.3.3",
     "tailwindcss": "^3.0.23"
   }
 }
