--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "playwright": "^1.56.0",
     "postcss": "^8.4.12",
     "prettier": "^3.3.3",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "yaml": "^2.8.1"
   }
 }
